test/resources/nameAnalyzer/failing/UndefinedVariable.amy
object Undefined
  def foo(): Int(32) := i + 1 end foo
end Undefined
